# ModelQuery

./: .gitignore  README.md  build.ps1  pyproject.toml
src/modelquery/: __main__.py
