[project]
name = "ModelQuery"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "mokurin000", email = "1348292515a@gmail.com" }]
dependencies = [
    "fastexcel>=0.11.6",
    "polars>=1.7.1",
    "ttkbootstrap>=1.10.1",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
